// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "exchange_rate.proto.gen";
option java_outer_classname = "ExchangeProto";
option objc_class_prefix = "EXP";

service CurrencyProvider {
    rpc getExchangeRates (Currency) returns (stream ExchangeRate) {
    }
}

enum CurrencyType {
    PLN = 0;
    EUR = 1;
    JEN = 2;
    USD = 3;
    SZK = 4;
}

message ExchangeRate {
    CurrencyType currency = 1;
    double rate = 2;
}

message Currency {
    repeated CurrencyType currency = 1;
}





